err/airi.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/airi'...
Compiling './lib/python3.5/site-packages/airi/api.py'...
***   File "./lib/python3.5/site-packages/airi/api.py", line 27
    print "ConnectionTest.lostConnection", address
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/airi/camera'...
Compiling './lib/python3.5/site-packages/airi/camera/protocol.py'...
***   File "./lib/python3.5/site-packages/airi/camera/protocol.py", line 250
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/airi/jinja.py'...
***   File "./lib/python3.5/site-packages/airi/jinja.py", line 52
    print "saving camera", args
                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/airi/media'...
Listing './lib/python3.5/site-packages/airi/media/css'...
Listing './lib/python3.5/site-packages/airi/media/css/cupertino'...
Listing './lib/python3.5/site-packages/airi/media/css/cupertino/images'...
Listing './lib/python3.5/site-packages/airi/media/css/images'...
Listing './lib/python3.5/site-packages/airi/media/images'...
Listing './lib/python3.5/site-packages/airi/media/js'...
Compiling './lib/python3.5/site-packages/airi/pair.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (pair.py, line 100)
Compiling './lib/python3.5/site-packages/airi/settings.py'...
***   File "./lib/python3.5/site-packages/airi/settings.py", line 31
    print "configuration file", name
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/airi/stream.py'...
***   File "./lib/python3.5/site-packages/airi/stream.py", line 71
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/airi/templates'...
Listing './lib/python3.5/site-packages/airi/twisted_bluetooth'...
Compiling './lib/python3.5/site-packages/airi/twisted_bluetooth/__init__.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (__init__.py, line 47)
Compiling './lib/python3.5/site-packages/airi/webcam.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (webcam.py, line 22)
Listing './lib/python3.5/site-packages/airi-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
